# Changelog

## Alpha 011 (Unreleased)

* Kettensäge und Bäume hinzugefügt
* Enten hinzugefügt
* Ausdauer hinzugefügt
* Nach einem Game Over wird das aktuelle Level neu gestartet
* Fußschritte Sound-Effekt hinzugefügt
* Atmo Sound für Map 02 hinzugefügt
* Geschosse werden 3 Sekunden nach dem Schuss aus der Szene entfernt
* Hühner sterben jetzt, wenn sie von einem Auto überfahren werden

## Alpha 010 (03.05.2024)

* map02 erweitert
* Hühner hinzugefügt
* Unterstützung für Rii USB Classic Controller hinzugefügt
* Musik-Tracks zu map02 hinzugefügt
* Meer-Soundeffekt zu map02 hinzugefügt
* Shader-Hintergründe im Menü geändert
* Menüpunkt "Steuerung" unter "Einstellungen" > "Video" entfernt

## Alpha 009 (29.03.2024)

* Schwierigkeitsgrad Auswahl hinzugefügt
* Level-Auswahl hinzugefügt
* Intro-Video für map02 hinzugefügt
* Checkbox "Rahmenlos" zum Launcher hinzugefügt
* Musikwiedergabe auf Linux korrigiert
* Map-Ladedauer drastisch reduziert

## Alpha 008 (15.03.2024)

* Aufgabe mit Autoschlüssel hinzugefügt
* Intro Video für Level hinzugefügt
* Hammer und Sparschwein hinzugefügt
* Frettchen hinzugefügt
* Spielstand-System hinzugefügt
* Fadeout-Animationen hinzugefügt
* V-Sync Grafik-Option hinzugefügt
* Weitere Musiktracks hinzugefügt
* In-Game Grafikeinstellungen hinzugefügt
* Menüs können jetzt mit Controller bedient werden
* Launcher UI verbessert
* Controller Support ist nun immer aktiviert
* Bugfix: Man kann ein Item nicht mehr auf einer Mauer ablegen
* Bugfix: Absturz im Launcher behoben

## Alpha 007 (08.03.2024)

* Inventar hinzugefügt
* Launcher hinzugefügt
* Map erweitert
* Atmosphären-Sound hinzugefügt
* Support für XBox 360 Controller hinzugefügt
* KI der Totenköpfe verbessert
* Performance der Screenshot-Funktion verbessert

## Alpha 006 (01.03.2024)

* Komplette Neuentwicklung auf anderer technologischer Basis
* TMX-Tilemap
* Sammelbare Münzen
* Verschiebbare Kisten
* Totenköpfe als Gegner
* Pymunk Physik-Engine
* Man kann schießen